[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asp-engine"
version = "0.1.0"
description = "A lightweight game engine built on Panda3D"
requires-python = ">=3.9"
dependencies = [
    "panda3d>=1.10.14",
]

[tool.setuptools]
package-dir = {"" = "src"}
